--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                 <div class="row pt-4">
                                     <div class="col-md-3  text-center">
                                         <span class="counter counter_edit text-center">1025</span>
-                                        <p class="text-center">Studetn </p>
+                                        <p class="text-center">Students </p>
                                     </div>
                                     <div class="col-md-3 text-center">
                                         <span class="counter counter_edit text-center">10</span>
