add Medam Phhoto

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="fs_logo">
-                                <img src="/images/team/md.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150"> 
+                                <img src="./images/team/ms.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150"> 
                             </div>
                         </div>
                     </div>
